fix: 修复代码警告并补充注释